# cosmic-color-picker

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
applet/: Cargo.toml
applet/resources/: com.pyxyll.CosmicColorPickerApplet.desktop
applet/src/: app.rs  color.rs  config.rs  i18n.rs  main.rs
daemon/: Cargo.toml
daemon/src/: history.rs  ipc.rs  main.rs  overlay.rs
gui/: Cargo.toml
gui/i18n/en/: cosmic_color_picker.ftl
gui/resources/: com.pyxyll.CosmicColorPicker.desktop  com.pyxyll.CosmicColorPicker.metainfo.xml
gui/src/: app.rs  color.rs  config.rs  i18n.rs  ipc.rs  main.rs  shortcut.rs
i18n/en/: cosmic_color_picker.ftl
src/: app.rs  autostart.rs  color.rs  config.rs  ipc.rs  main.rs  overlay.rs
src/overlay/: capture.rs  font.rs  mod.rs
