[package]
name = "cosmic-color-picker"
version = "0.1.0"
edition = "2024"
description = "Native Wayland color picker for COSMIC desktop"

[dependencies]
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
image = { version = "0.25", default-features = false, features = ["png"] }
tiny-skia = "0.11"

[profile.release]
lto = "thin"
codegen-units = 1
