[package]
name = "cosmic-applet-color-picker"
version = "0.2.1"
edition = "2024"
description = "COSMIC panel applet for the color picker"

[[bin]]
name = "cosmic-applet-color-picker"
path = "src/main.rs"

[dependencies]
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = "8.7"
tokio = { version = "1", features = ["full"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
]

[dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic.git"
