[package]
name = "cosmic-color-picker"
version = "0.2.0-dev"
edition = "2024"
description = "COSMIC color picker GUI"

[[bin]]
name = "cosmic-color-picker"
path = "src/main.rs"

[dependencies]
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
regex = "1"
rust-embed = "8.7"
tokio = { version = "1", features = ["full"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "about",
    "single-instance",
    "wgpu",
    "xdg-portal",
    "tokio",
    "wayland",
    "winit",
    "dbus-config",
]

[dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic.git"
